# ITI-CMake-Playground

./: .gitignore  README.md
01-getting_start/: CMakeLists.txt  README.md
01-getting_start/src/: main.cpp
02-hello_cmake/: CMakeLists.txt  README.md  main.cpp
03-calculator/: CMakeLists.txt  README.md
03-calculator/inc/: cal.hpp
03-calculator/src/: cal.cpp
04-calculatorV2/: CMakeLists.txt  README.md
05-calculator_V3/: CMakeLists.txt  README.md
05-calculator_V3/src/: CMakeLists.txt  main.cpp
06-calculator_V4/: CMakeLists.txt  README.md
06-calculator_V4/libs/: CMakeCache.txt  Makefile  cmake_install.cmake
06-calculator_V4/libs/calc/: CMakeLists.txt
06-calculator_V4/libs/libs/: Makefile  cmake_install.cmake
06-calculator_V4/libs/libs/calc/: Makefile  cmake_install.cmake
06-calculator_V4/libs/src/: Makefile  cmake_install.cmake
06-calculator_V4/src/: CMakeLists.txt
07-CustomProject/: CMakeLists.txt  test.h
07-CustomProject/scripts/: generate_buildinfo.py
07-CustomProject/src/: main.cpp
08-Demo1/: CMakeLists.txt
09-Demo2/: CMakeLists.txt
10-FinalDemo/: CMakeLists.txt
